--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   <link href="https://api.mapbox.com/mapbox-gl-js/v2.1.1/mapbox-gl.css" rel="stylesheet">
   <link rel="stylesheet" href="stylesheet.css">
   <script src="https://api.mapbox.com/mapbox-gl-js/v2.1.1/mapbox-gl.js"></script>
-  <script src="utils.js"></script>
-  <script src="generate-path.js"></script>
+  <script src="js/utils.js"></script>
+  <script src="js/generate-path.js"></script>
 </head>
 
 <body>
